--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ELearningPlatform</title>
+    <title>E-Learning Platform</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="./mdb.min.css">
+    <script defer src="./fontawesome-all.min.js"></script>
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 </head>
